# forecasting-task

./: .gitignore  .pre-commit-config.yaml  forecasting-task.ipynb  pyproject.toml  requirements.txt
data/: README.md
