[project]
name = "forecasting-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.5.9",
    "geemap>=0.35.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "missingno>=0.5.2",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "xarray>=2025.3.1",
]
