[project]
name = "forecasting-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.5.9",
    "geemap>=0.35.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "missingno>=0.5.2",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.2.0",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "statsmodels>=0.14.4",
    "xarray>=2025.3.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
